# MKL-Q

./: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  pyproject.toml.cu13
.github/: branch-protection-main.json  labels.yml  pull_request_template.md
.github/workflows/: mklq-apple-silicon-ci.yml  mklq-package-release.yml  mklq-public-hygiene.yml
benchmarks/mklq/: README.md  bench_mklq_targets.py  check_cpu_gate_counter_docs.py  check_cpu_sampling_counter_docs.py  check_metal_runtime_counter_docs.py  check_metal_sampling_boundary_evidence.py  check_metal_uniform_sampling_evidence.py  check_performance_evidence.py  check_public_claims.py  check_public_report_paths.py  check_sampling_profile_evidence.py  make_summary.py  package_release.py  repair_macos_install_signatures.py  run_clean_cpu_benchmark.py  run_correctness_gate.py  run_cpu_gate_counter_probe.py  run_cpu_sampling_counter_probe.py  run_cpu_scaling_benchmark.py  run_metal_runtime_counter_probe.py  run_package_release_audit.py  run_preflight_audit.py  run_public_healthcheck.py  run_public_readiness_audit.py  run_public_release_checklist_audit.py  run_sampling_phase_profile_probe.py  run_sampling_scaling_benchmark.py  run_self_hosted_ci_audit.py  run_source_release_tag_audit.py  run_upstream_sync_audit.py  summarize_cpu_gate_counters.py  summarize_cpu_sampling_counters.py  summarize_metal_runtime_counters.py  summarize_reports.py
cmake/modules/: BuildHelpers.cmake
docs/mklq/: apple-silicon-ci.md  architecture.md  benchmark-evidence.md  branch-protection.md  cpu-gate-counters.md  cpu-sampling-counters.md  developer-workflow.md  issue-labels.md  known-limitations.md  maintainer-runbook.md  metal-atomic-marginal-design.md  metal-atomic-marginal-plan.md  metal-execution-boundary.md  metal-runtime-counters.md  public-readiness.md  public-release-checklist.md  release-notes-v0.1.0-source.md  release-notes-v0.1.0.md  release-policy.md  source-only-rc-v0.1.md  testing-matrix.md  upstream-sync.md  validation.md
python/: CMakeLists.txt  README.md.in
python/cudaq/: __init__.py  _mklq_distribution.py
python/extension/: CMakeLists.txt  CUDAQuantumExtension.cpp
python/tests/analysis/: test_dem_from_kernel.py
python/utils/: CMakeLists.txt  LinkedLibraryHolder.cpp
runtime/common/: CMakeLists.txt  RestClient.cpp  SampleResult.cpp  Version.cpp.in
runtime/cudaq/: CMakeLists.txt
runtime/nvqir/: CMakeLists.txt  CircuitSimulator.h
runtime/nvqir/mklq/: MklqCpuCircuitSimulator.cpp  MklqMetalRuntime.h  MklqMetalRuntime.mm  MklqMetalRuntimeFallback.cpp  README.md  mklq-metal.yml
scripts/: build_wheel.sh
targettests/TargetConfig/: mklq_runtime_smoke.cpp  mklq_targets.config
unittests/backends/: CMakeLists.txt
(+90 files in other folders)
